# Adaptive-Stock-Trading

./: .dockerignore  .env  .env.example  .gitignore  .replit  Dockerfile  Dockerfile.agent  Dockerfile.backend  Dockerfile.web  PROJECT_RESET_PROMPT.md  README.md  README_RENDER.md  REPLIT_SETUP.md  bandit.yaml  design_guidelines.md  dev.py  docker-compose.yml  eslint.config.js  firebase.json  index.html  lighthouserc.json  model.py  package-lock.json  package.json  postcss.config.js  render.yaml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.github/agents/: backend.agent.md  database.agent.md  frontend.agent.md  supervisor.agent.md
.github/workflows/: azure-deploy.yml  ci.yml  deploy-pages.yml
.render/: deploy-wait.sh  set-env.ps1  set-env.sh
apps/client/: .env.example  index.html
apps/client/src/: App-new.tsx  App.tsx  index.css
apps/server/: agent.ts  db.ts  gemini.ts  index.ts  routes.ts  storage.ts
apps/server/py/: agent_server.py  agent_service.py
assets/: index-DukfeVMT.js  index-M5NFnkdc.css
attached_assets/: Pasted--Double-Deep-Q-Network-DDQN-Agent-for-Stock-Trading--1761456894234_1761456894237.txt  Pasted-Project-title-Adaptive-Stock-Exchange-Trading-Using-Deep-Reinforcement-Learning-Double-DQN-optio-1761455621539_1761455621540.txt
backend/: .env.example  .gitignore  .tmp_phase34_token.txt  Dockerfile  README.md  SECURITY-IMPLEMENTATION.md  app.py  main.py  pyproject.toml  railway.toml  requirements.prod.txt  requirements.txt  run_server.py  start_server.py  test_security.py
backend/routers/: portfolio.py
backend/scripts/: check_env.py
backend/tests/: test_polygon_websocket.py  test_routes.py
client/src/components/: app-sidebar.tsx  metric-card.tsx  websocket-status.tsx
client/src/hooks/: use-api.ts
client/src/pages/: backtest.tsx  logs.tsx  (+2 more)
database/: docker-compose.yml
deploy/cloudrun/: service.production.yaml  service.staging.yaml
deployment/: render.yaml  vercel.json
docs/: azure-deployment-commands.ps1  azure-deployment-guide.md  backend-architecture.md  env-matrix.md  perf-security.md  pre-deployment-report.md  project-overview.md
frontend/: .env.example  .gitignore  vercel.json
frontend/src/: App.tsx  main.tsx
perf/: k6-smoke.js
scripts/: setup.ps1  setup.sh  start.ps1
scripts/ci/: post-results.mjs
server/: routes.ts  storage.ts
(+46 files in other folders)
