[tool.poetry]
name = "stocktrade-backend"
version = "0.1.0"
description = "Adaptive stock trading backend (FastAPI + RL)"
authors = ["Abhilash2240 <you@example.com>"]
readme = "README.md"
packages = [{ include = "packages" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.121.1"
uvicorn = { version = "0.32.0", extras = ["standard"] }
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
sqlmodel = "0.0.22"
asyncpg = "0.30.0"
httpx = "0.27.2"
websockets = "13.1"
python-dotenv = "1.0.1"
numpy = "2.1.3"
torch = { version = "2.4.1", source = "pypi" }
python-jose = { version = "3.3.0", extras = ["cryptography"] }
requests = "2.32.3"
slowapi = "0.1.9"
prometheus-fastapi-instrumentator = "6.1.0"
prometheus-client = "0.20.0"
cryptography = ">=42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
httpx = { version = "0.27.2", extras = ["async"] }
ruff = "0.7.3"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
